# playoffsbot

./: .gitignore  Cargo.toml  LICENSE
src/: analysis.rs  generate.rs  main.rs  markdown.rs  nhlapi.rs  simulation.rs
